# email-monitor

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  sample_config.json
email_monitor/: __init__.py  clients.py  conifg.py  console.py  monitor.py  smtp_client.py
