[tool.poetry]
name = "email-monitor"
version = "0.1.0"
description = ""
authors = ["Juan Manuel Consoli <jconsoli@evertz.com>"]
readme = "README.md"
packages = [{include = "email_monitor"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.6.1"
email-validator = "^2.1.0.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pylint = "^3.0.3"
black = "^24.2.0"

[tool.poetry.scripts]
monitor = 'email_monitor:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
